After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766458 - widget: fix GtkLabelAccessible NULL links.
widget: fix GtkLabelAccessible NULL links.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-05-14 23:07 UTC by Alban Browaeys
Modified: 2016-05-15 14:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
set widget accessible early on (1.79 KB, patch)
2016-05-14 23:07 UTC, Alban Browaeys
committed Details | Review

Description Alban Browaeys 2016-05-14 23:07:45 UTC
Created attachment 327901 [details] [review]
set widget accessible early on

Fix testsuite/a11y/about.ui GtkAboutDialog :

    "CRITICAL **: atk_hyperlink_get_start_index: assertion 'ATK_IS_HYPERLINK (link)' failed"

That is set widget->priv->accessible as soon as accessible object is generated.
    
When accessible object is created accessible->priv->widget is set,
If widget->priv->accessible is not , then _gtk_label_accessible_update_links
exits early, thus without creating the links on the accessible side.
(This as it checks for the widget to have the accessible set before proceeding).

The issue was introduced in commit ff3264b4c56196f5a0575b6595df81b66e5c30cc "widget: Store accessible in GtkWidgetPrivate" by a move of this initialization out of the condition (as to merge identical statements, though it hurts here).
Comment 1 Alban Browaeys 2016-05-14 23:10:50 UTC
sorry, the severity might be high but I have not tested the new code out of the testsuite so restore to default "normal" level.